--- a/docs/stat562/fe_stat562_bak.tex
+++ b/docs/stat562/fe_stat562_bak.tex
@@ -184,22 +184,30 @@ sufficient statistic for \(\lambda\).
 Let \(x=y-\theta\). For \(N(\theta,\sigma^2)\) is a location family of
 densities (\texttt{2018.11.20p7}),
 
-\(g(y|\theta)=\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(y-\theta)^2}{2\sigma^2}}=\frac1{\sigma\sqrt{2\pi}}e^{-\frac{x^2}{2\sigma^2}}=f(x)=f(y-\theta)\)
+\[g(y|\theta)=\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(y-\theta)^2}{2\sigma^2}}=\frac1{\sigma\sqrt{2\pi}}e^{-\frac{x^2}{2\sigma^2}}=f(x)=f(y-\theta)\]
 
 Thus, \(\theta\) is a location parameter.
 
 \begin{itemize}
 \tightlist
 \item
-  \textbf{Step2: \(Y_n-\bar Y\) is location invariant}
+  Step2: \(Y_n-\bar Y\) is location invariant
 \end{itemize}
 
-For \(Y_n\sim N(\theta,\sigma^2)\), \(\bar Y\sim N(\theta,\sigma^2/n)\)
 \texttt{2019-2-21p4-6}
 
+Let \(X=Y_n-\bar Y\). \(Y_n\sim N(\theta,\sigma^2)\),
+\(\bar Y\sim N(\theta,\sigma^2/n)\)
+
 Consider the group of transformations defined by
-\(\mathcal{G}=\{Y_n-\bar Y,-\infty<\bar Y<\infty\}\),
-\(Y_n+a-(\bar Y+a)=Y_n-\bar Y\).
+\(\mathcal{G}=\{Y_n-\bar Y,-\infty<\bar Y<\infty\}\), where
+\(Y_n-\bar Y=(y_1-\bar y,..,y_n-\bar y)\). By convolution formula,
+
+\[f_X(x)=\int^{\infty}_{-\infty}f_{Y_n}(w)f_{\bar Y}(x-w)dw=\int^{\infty}_{-\infty}\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(w-\theta)^2}{2\sigma^2}}\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}e^{-\frac{n(x-w-\theta)^2}{2\sigma^2}}dw\]
+
+\[Y_n-\bar Y=\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(y_i-\theta)^2}{2\sigma^2}}-\frac1n\sum_{i=1}^n\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(y_i-\theta)^2}{2\sigma^2}}\]
+
+\[Y_n-\bar Y=\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(y_i-\theta)^2}{2\sigma^2}}-\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}e^{-\frac{n(\bar y-\theta)^2}{2\sigma^2}}\]
 
 Thus, the joint distribution of \(Y_n-\bar Y\) is in \(\mathcal{F}\) and
 hence \(\mathcal{F}\) is invariant under \(\mathcal{G}\).
@@ -207,34 +215,98 @@ hence \(\mathcal{F}\) is invariant under \(\mathcal{G}\).
 \begin{itemize}
 \tightlist
 \item
-  \textbf{step3: \(Y_n-\bar Y\) is ancillary statistic for \(\theta\)}
+  step3: \(Y_n-\bar Y\) is ancillary statistic for \(\theta\)
 \end{itemize}
+
+\texttt{2019-2-19p6}
 
 \(f(y|\theta)\) is a location exponential family. Let \(X_n=Y_n-\theta\)
-is a random sample from \(f(y|0)\) \texttt{2019-2-19p6}
+is a random sample from \(f(y|0)\)
 
-\(Y_n-\bar Y=Y_n-\frac1{n}\sum_{i=1}^nY_i=(Y_n-\theta)-\frac1{n}\sum_{i=1}^n(Y_i-\theta)= X_n-\frac1{n}\sum_{i=1}^nX_i\)
+\[Y_n-\bar Y=Y_n-\frac1{n}\sum_{i=1}^nY_i=(Y_n-\theta)-\frac1{n}\sum_{i=1}^n(Y_i-\theta)= X_n-\frac1{n}\sum_{i=1}^nX_i\]
 
 \(Y_n-\bar Y\) is a function of only \(X_1,..,X_n\) and be free of
-\(\theta\). It is an ancillary statistic for \(\theta\).
-
-\begin{itemize}
-\item
-  \textbf{step4: For \(Y\sim N(\theta,\sigma^2)\), \(\bar Y\) is
-  sufficient statistic for \(\theta\)}
-\item
-  \textbf{step5: \(\bar Y\) is complete statistic for \(\theta\)}
-\end{itemize}
-
-\(\bar Y\sim N(\theta,\sigma^2/n)\) is a member of the exponential
-family. It is a complete sufficient statistic.
+\(\theta\). It is an ancillary statistic.
 
 \begin{itemize}
 \tightlist
 \item
-  \textbf{step6: By Basu's theorem, an acillary statistc \(Y_n-\bar Y\)
-  and a complete sufficient statistic \(\bar Y\) are
-  independent.}\texttt{2019-2-19p10}
+  step4: \(\bar Y\) is sufficient statistic for \(\theta\)
+\end{itemize}
+
+Method 1:
+
+\(f(\mathbf{y}|\theta)\) is the joint pdf or pmf of \(\mathbf{Y}\),
+\(g(\bar y|\theta)\) is the pdf or pmf of \(\bar{\mathbf{Y}}\).
+
+\[f(\vec{y}|\theta)=\prod_{i=1}^n(\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(y_i-\theta)^2}{2\sigma^2}})=\frac1{(\sigma\sqrt{2\pi})^n}e^{-\frac{1}{2\sigma^2}\sum_{i=1}^n(y_i-\theta)^2}=\frac1{(\sigma\sqrt{2\pi})^n}e^{-\frac{1}{2\sigma^2}\sum_{i=1}^n(y_i-\bar y+\bar y-\theta)^2}\]
+
+For
+\(\sum_{i=1}^n(y_i-\bar y)=0,\quad\sum_{i=1}^n(\bar y-\theta)^2=n(\bar y-\theta)^2\),
+the part of exponent is
+
+\[=-\frac{1}{2\sigma^2}\sum_{i=1}^n[(y_i-\bar y)^2+(y_i-\bar y)(\bar y-\theta)+(\bar y-\theta)^2]=-\frac{1}{2\sigma^2}[\sum_{i=1}^n(y_i-\bar y)^2+n(\bar y-\theta)^2]\]
+
+For \(\bar Y\sim N(\theta,\sigma^2/n)\),
+\(g(\bar y|\theta)=\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}e^{-\frac{n(\bar y-\theta)^2}{2\sigma^2}}\)
+
+\[\frac{f(\mathbf{y}|\theta)}{g(\bar y|\theta)}=\frac{\frac1{(\sigma\sqrt{2\pi})^n}e^{-\frac{1}{2\sigma^2}[\sum_{i=1}^n(y_i-\bar y)^2+n(\bar y-\theta)^2]}}{\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}e^{-\frac{n(\bar y-\theta)^2}{2\sigma^2}}}=\frac1{\sqrt{n}(\sigma\sqrt{2\pi})^{n-1}}e^{-\frac{1}{2\sigma^2}\sum_{i=1}^n(y_i-\bar y)^2}\]
+
+which is free of \(\theta\) (6.2.2). For every \(\mathbf{y}\) in the
+sample space, the ratio \(f(\mathbf{y}|\theta)/g(\bar y|\theta)\) is
+constant as a function of \(\theta\), then \(\bar{Y}\) is a sufficient
+statistic for \(\theta\).
+
+Method 2:
+
+\[f(\vec{y}|\theta)=\prod_{i=1}^n(\frac1{\sigma\sqrt{2\pi}}e^{-\frac{(y_i-\theta)^2}{2\sigma^2}})=\frac1{(\sigma\sqrt{2\pi})^n}e^{-\frac{1}{2\sigma^2}\sum_{i=1}^n(y_i-\theta)^2}=\frac{e^{-\frac{n\theta^2}{2\sigma^2}}}{(\sigma\sqrt{2\pi})^n}e^{\frac{\theta}{\sigma^2}\sum_{i=1}^ny_i}e^{-\frac{\sum_{i=1}^ny_i^2}{2\sigma^2}}=k(t|\theta)h(\vec y)\]
+
+\(h(\vec y)=e^{-\frac{\sum_{i=1}^ny_i^2}{2\sigma^2}}\) is free of
+\(\theta\). By the \emph{Factorization Theorem}, \(\sum_{i=1}^ny_i\) is
+a sufficient statistic for \(\theta\). \(\bar Y=\frac1n\sum_{i=1}^ny_i\)
+is a function of \(\sum_{i=1}^ny_i\) and is a minimal sufficient
+statistic for \(\theta\).
+
+\begin{itemize}
+\tightlist
+\item
+  step5: \(\bar Y\) is complete statistic for \(\theta\)
+\end{itemize}
+
+Method 1: \texttt{2019-2-19p7-9}
+
+For \(\bar Y\sim N(\theta,\sigma^2/n)\), the family of is
+\(\{\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}e^{-\frac{n(\bar y-\theta)^2}{2\sigma^2}}:-\infty<\theta<\infty\}\)
+
+Supporse that \(E[g(\bar Y)]=0\forall\theta\)
+
+\[\int_{0}^\infty g(\bar y)f(\bar y)d\bar y=\int_0^\infty g(\bar y)\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}e^{-\frac{n(\bar y-\theta)^2}{2\sigma^2}}d\bar y=\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}\int_0^\infty g(\bar y)e^{-\frac{n(\bar y-\theta)^2}{2\sigma^2}}d\bar y=0\]
+
+For \(\frac{\sqrt{n}}{\sigma\sqrt{2\pi}}\neq0\),
+\(\frac{d}{dx}\int_{v(x)}^{u(x)}{f(t)}dt=u'(x)f[u(x)]-v'(x)f[v(x)]\),
+then
+
+\[0=\frac{d}{d\theta}E[g(\bar Y)]=\frac{d}{d\theta}\left[\int_{-\infty}^\infty g(\bar y)e^{-\frac{n(\bar y-\theta)^2}{2\sigma^2}}d\bar y\right]=0-\theta'[g(\theta)e^{-\frac{n(\theta-\theta)^2}{2\sigma^2}}]=-g(\theta)\]
+
+So \(g(\theta)=0,\forall\theta\), then \(P(g(T)=0)=1\). Thus, \(\bar Y\)
+is a complete statistic.
+
+Method 2:
+
+\(f(y|\theta)\) is a member of the exponential family
+(\texttt{2019-2-19p12}),
+
+\[f(y|\vec\theta)=\frac1{(\sigma\sqrt{2\pi})^n}e^{-\frac{1}{2\sigma^2}\sum_{i=1}^n(y-\theta)^2}=e^{-\frac{\sum_{i=1}^ny_i^2}{2\sigma^2}}\frac{e^{-\frac{n\theta^2}{2\sigma^2}}}{(\sigma\sqrt{2\pi})^n}e^{\frac{\theta}{\sigma^2}n\bar y}=h(y)c(\vec \theta)e^{\sum^k_{j=1}W_j(\vec \theta)t_j(y)}\]
+For \(\{W_1(\vec \theta),..,W_k(\vec \theta)\}\) contains an open
+interval in \(\Bbb R\), so \(T(\vec y)=\bar y\) is a complete sufficient
+statistic.
+
+\begin{itemize}
+\tightlist
+\item
+  step6: By Basu's theorem, an acillary statistc \(Y_n-\bar Y\) and a
+  complete sufficient statistic \(\bar Y\) are
+  independent.\texttt{2019-2-19p10}
 \end{itemize}
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
@@ -254,15 +326,15 @@ family. It is a complete sufficient statistic.
   \textcolor[rgb]{0.5,0.5,0.5}{Find the posterior distribution $\pi(\theta|\vec x)$.}
 \end{enumerate}
 
+\texttt{2019-2-26p8-9,p11-p13}
+
 For
 \(L(\theta)=\hat\theta e^{-\theta\sum x_i},\quad \pi(\theta)=\lambda e^{-\lambda\theta}\),
 and the kernel of a function is the main part of the function, the part
 that remains when constants are disregarded
-(\texttt{2019-2-26p8-9,p11-p13} \texttt{2019-2-28p8\ Exapmle\ 2.3.8}).
-that is
+(\texttt{2019-2-28p8\ Exapmle\ 2.3.8}). that is
 
-\(\pi(\theta|\vec x)\propto L(\theta)\pi(\theta)=\theta^n e^{-\theta\sum x_i}\lambda e^{-\lambda\theta}\propto\theta^{n+1-1}e^{-\theta(\lambda+\sum x_i)}\)
-
+\[\pi(\theta|\vec x)\propto L(\theta)\pi(\theta)=\theta^n e^{-\theta\sum x_i}\lambda e^{-\lambda\theta}\propto\theta^{n+1-1}e^{-\theta(\lambda+\sum x_i)}\]
 which is \(Gamma(\alpha=n+1,\beta=\frac1{\lambda+\sum x_i})\)
 distribution.
 
@@ -276,7 +348,9 @@ distribution.
   \textcolor[rgb]{0.5,0.5,0.5}{Find the Bayes estimator of $\theta$, assuming square-error loss}
 \end{enumerate}
 
-Suppose \(L_0(\hat\theta)=(\hat\theta-\theta)^2\). \texttt{2019-2-28p1}
+\texttt{2019-2-28p1}
+
+Suppose \(L_0(\hat\theta)=(\hat\theta-\theta)^2\).
 \(E[L_0(\hat\theta)|\vec x]\) is minimized when
 \[\hat\theta_{Bayes}=E[\theta|\vec x]=\alpha\beta=\frac{n+1}{\lambda+\sum x_i}\]
 which is the posterior mean.
@@ -325,8 +399,9 @@ there is no closed form.
 \tightlist
 \item
   \textcolor[rgb]{0.5,0.5,0.5}{Find the Bayes estimator of $\theta$, assuming binary loss}
-  \texttt{2019-2-28p5-6}
 \end{enumerate}
+
+\texttt{2019-2-28p5-6}
 
 Suppose
 \(L_0(\hat\theta)=\begin{cases}0&\hat\theta=\theta\\1&\text{elsewhere}\end{cases}\).
@@ -356,8 +431,9 @@ which is the posterior mode.
 \tightlist
 \item
   \textcolor[rgb]{0.5,0.5,0.5}{Find the posterior distribution $\pi(\theta|\vec x)$.}
-  \texttt{2019-2-26p8-9}
 \end{enumerate}
+
+\texttt{2019-2-26p8-9}
 
 For \(\pi(\theta)=1,\theta>0\),
 \(L(\theta)=\theta^n e^{-\theta\sum x_i}\), from the kernel of function,
@@ -447,8 +523,9 @@ which is the posterior mode.
 \tightlist
 \item
   \textcolor[rgb]{0.5,0.5,0.5}{Find $\hat\theta_{MLE}$, the maximum likelihood estimator of $\theta$.}
-  \texttt{2019-2-2p12}
 \end{enumerate}
+
+\texttt{2019-2-2p12}
 
 \[f(\vec x|\theta)=L(\theta)=\theta^n(\prod x_i)^{\theta-1}=\theta^n e^{(-\theta-1)\sum^n_{i=1} \ln x_i}\]
 \[l(\theta)=n\ln\theta-(\theta+1)\sum^n_{i=1} \ln x_i\]
@@ -524,8 +601,9 @@ So \(Y_i=\ln x_i\sim Gamma(\alpha=n,\beta=\frac1{\theta})\)
 \tightlist
 \item
   \textcolor[rgb]{0.5,0.5,0.5}{Find $\hat\theta_{MOM}$, the method of moments estimator of $\theta$.}
-  \texttt{2019-2-21p8\ 7.2.1}
 \end{enumerate}
+
+\texttt{2019-2-21p8\ 7.2.1}
 
 \(EX=\mu=\int_1^{\infty}x\theta x^{-\theta-1}dx=\left.\theta\frac{x^{-\theta+1}}{-\theta+1}\right|_1^{\infty}=\frac\theta{\theta-1}\)
 
@@ -552,7 +630,9 @@ For \(EX=\mu=\frac\theta{\theta-1}\)
 
 \[=\frac{\theta(\theta-1)^2-\theta^2(\theta-2)}{(\theta-1)^2(\theta-2)}=\frac{\theta^3-2\theta^2+\theta-\theta^3+2\theta^2}{(\theta-1)^2(\theta-2)}=\frac{\theta}{(\theta-1)^2(\theta-2)}\]
 
-Use a \(2^{nd}\) order Taylar series \texttt{2019-3-5p1}
+\texttt{2019-3-5p1}
+
+Use a \(2^{nd}\) order Taylar series
 
 \[g(x)=g(x_0)+g'(x_0)(x-x_0)+g''(x_0)\frac{(x-x_0)^2}2+R\]
 
@@ -575,8 +655,9 @@ Choose \(x_0=EX=\mu\)
 \tightlist
 \item
   \textcolor[rgb]{0.5,0.5,0.5}{Using the delta method to approximate the variance of $\hat\theta_{MOM}$.}
-  \texttt{2019-3-5p3}
 \end{enumerate}
+
+\texttt{2019-3-5p3}
 
 \(Var[\hat\theta_{MOM}]\approx Var[g(x_0)+g'(x_0)(x-x_0)]=Var[\frac{\mu}{\mu-1}+\frac{1}{(\mu-1)^2}(\bar x-\mu)]\)
 \[=\frac{1}{(\mu-1)^4}\frac{\sigma^2}n=\frac{1}{(\frac\theta{\theta-1}-1)^4}\frac1n\frac{\theta}{(\theta-1)^2(\theta-2)}=\frac{\theta(\theta-1)^2}{n(\theta-2)}\]
