--- a/static/stat565/lab7_stat565.Rmd
+++ b/static/stat565/lab7_stat565.Rmd
@@ -96,15 +96,15 @@ pander(Anova(model_ethics, type="III"))
  ------------------------------------------------------
     Type III       Sum Sq   Df    F value    Pr(>F)   
  ----------------- -------- ----- --------- -----------
-  **(Intercept)**   100173    1     702.1    5.308e-80 
+ **(Intercept)**   180136    1     1263     1.327e-108 
 
-   **g**            417.6     1     2.927     0.08816  
+   **g**           785.2     1     5.503     0.01964   
 
-   **r**            2309      1     16.18    7.318e-05 
+   **r**            2021     1     14.17     0.000202  
 
-   **g:r**          34.1      1     0.239     0.6253   
+   **g:r**          34.1     1     0.239      0.6253   
 
-   **Residuals**    42087    295     NA         NA     
+  **Residuals**    42087    295     NA          NA     
  
    **Total**       46030.1   298     NA         NA   
  ------------------------------------------------------
@@ -115,9 +115,10 @@ pander(Anova(model_ethics, type="III"))
 
 The line plot shows that two lines are approximately parallel. Difference in score between ranks is same for different genders. There is not obvious interaction effect.
 
-According to ANOVA table, there is not a significant interaction effect from ranks and genders on the score at 5% significance level (P-value=0.6253). That means, effect of ranks and effect of genders on y is independent. Therefore, examine the main effects.
+According to ANOVA table, there is not a significant interaction effect from ranks and genders on the score at 5% significance level (P-value=0.6253). That means, effect of ranks and effect of genders on score is independent. Therefore, examine the main effects.
 
-According to type III ANOVA table, there is a significant effect from genders on the score at 5% significance level (P-value=$7.318\times e^{-5}$).
+According to type III ANOVA table, there is a significant effect from genders and ranks on the score at 5% significance level (P-value=0.01964, 0.000202, respectively
+).
 
 (e)  \textcolor[rgb]{0.5,0.5,0.5}{Report the code here without output.}
 
